--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <button>Click Me</button>   
+<form action="">
+    <div class="form-group">
+        <label for="Nombre">Nombre</label>
+        <input type="text" id="Nombre" name="Nombre">
+    </div>
+    <div class="form-group">
+        <label for="Apellidos">Apellidos</label>
+        <input type="text" id="Apellidos" name="Apellidos">
+    </div>
+    <button type="submit">Enviar</button>
+</form>
+
+
 </body>
 </html>
