--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
         <label for="Apellidos">Apellidos</label>
         <input type="text" id="Apellidos" name="Apellidos">
     </div>
+    <div class="form-group">
+        <label for="FechaNacimiento">Fecha de Nacimiento</label>
+        <input type="date" id="FechaNacimiento" name="FechaNacimiento">
+    </div>
+    <div class="form-group">
+        <label for="GuardarDatos">Guardar datos</label>
+        <input type="text" id="GuardarDatos" name="GuardarDatos">
+    </div>
+
+
     <button type="submit">Enviar</button>
 </form>
 
