--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
 
 
     <button type="submit">Enviar</button>
+
+
+    <div class="form-check">
+        <input type="checkbox" id="terminos" name="terminos" value="aceptado">
+        <label for="terminos">Checkbox</label>
+    </div>
+
+    
+</form>
+
+
 </form>
 
 
