Changes to be committed: 	modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <input type="date" id="FechaNacimiento" name="FechaNacimiento">
     </div>
     <div class="form-group">
-        <label for="GuardarDatos">Guardar datos</label>
-        <input type="text" id="GuardarDatos" name="GuardarDatos">
+        <label for="CorreoElectronico">Correo Electronico</label>
+        <input type="text" id="CorreoElectronico" name="CorreoElectronico">
     </div>
 
 
@@ -38,7 +38,6 @@
 </form>
 
 
-</form>
 
 
 </body>
