modified:   index.html     modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -60,10 +60,18 @@
         <a href="#" class="cerrar">Cerrar</a>
     </div>
 
+    <div class="imagen-relativa-placeholder"></div>
+
     <blockquote class="cita-ejemplo">
         <p>La web es más un invento social que técnico. Lo diseñé para que fuera un espacio social, un lugar donde la humanidad pudiera colaborar.</p>
         <footer>— Tim Berners-Lee</footer>
     </blockquote>
+
+    <div class="card">
+        <button class="delete-button" aria-label="Eliminar">&times;</button>
+        <h3>Tarjeta de Perfil</h3>
+        <p>Este es un ejemplo de una tarjeta. El botón de eliminar en la esquina tiene <code>position: absolute</code> y esta tarjeta, su contenedor, tiene <code>position: relative</code>.</p>
+    </div>
 
 </body>
 </html>
