modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -70,7 +70,26 @@
     <div class="card">
         <button class="delete-button" aria-label="Eliminar">&times;</button>
         <h3>Tarjeta de Perfil</h3>
-        <p>Este es un ejemplo de una tarjeta. El botón de eliminar en la esquina tiene <code>position: absolute</code> y esta tarjeta, su contenedor, tiene <code>position: relative</code>.</p>
+        <p>El botón de eliminar en la esquina tiene position: absolute y esta tarjeta, su contenedor, tiene position: relative.</p>
+        
+    </div>
+
+    <!-- Ejemplo de Z-Index -->
+    <div class="contenedor-z">
+        <div class="caja-z caja-roja">
+            Caja Roja (z-index: 1)
+        </div>
+        <div class="caja-z caja-azul">
+            Caja Azul (z-index: 2)
+        </div>
+    </div>
+
+    <!-- Ejemplo de Centrado con Transform -->
+    <div class="contenedor-centrado">
+        <div class="card-transform-centrada">
+            <h3>¡Centrada!</h3>
+            <p>Esta card está centrada con position y transform.</p>
+        </div>
     </div>
 
 </body>
