modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Formulario Interactivo</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body> 
 
     <nav class="main-nav">
         <ul>
@@ -90,6 +90,11 @@
             <h3>¡Centrada!</h3>
             <p>Esta card está centrada con position y transform.</p>
         </div>
+    </div>
+
+    <!-- Ejemplo de Variable con Fallback -->
+    <div class="caja-fallback">
+        <p>Esta caja usa la variable <code>--color-caja-especial</code>. Como no la hemos definido, aplica el color de respaldo (fallback) anaranjado que especificamos en el CSS.</p>
     </div>
 
 </body>
