Changes to be committed: 	modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <!-- Ejemplo de Variable con Fallback -->
     <div class="caja-fallback">
-        <p>Esta caja usa la variable <code>--color-caja-especial</code>. Como no la hemos definido, aplica el color de respaldo (fallback) anaranjado que especificamos en el CSS.</p>
+        <p>este es un Ejemplo de  (fallback).</p>
     </div>
 
 </body>
